-- correction of fxml panels' size

--- a/src/sceneBuilderGui/fxmlResources/welcomeFxml/customerData.fxml
+++ b/src/sceneBuilderGui/fxmlResources/welcomeFxml/customerData.fxml
@@ -8,20 +8,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-
-
-<BorderPane fx:id="customerData"
-            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="customerData" prefHeight="300.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Restaurant logo -->
 
     <top>
-        <ImageView fx:id="logo"
-                   fitHeight="103.0" fitWidth="388.0" pickOnBounds="true" BorderPane.alignment="CENTER">
+        <ImageView fx:id="logo" fitHeight="103.0" fitWidth="388.0" pickOnBounds="true" BorderPane.alignment="CENTER">
             <image>
                 <Image url="@../../../../img/logo_try.jpg" />
             </image>
+         <BorderPane.margin>
+            <Insets top="30.0" />
+         </BorderPane.margin>
 
         </ImageView>
     </top>
@@ -31,34 +29,31 @@
     <center>
       <FlowPane fx:id="dataInsert" alignment="CENTER">
          <children>
-            <HBox prefHeight="123.0" prefWidth="600.0">
+            <HBox prefHeight="133.0" prefWidth="756.0" spacing="80.0">
 
                <children>
 
        <!-- VBOX contains Field for customer to insert his name, surname and e-mail -->
 
-                  <VBox fx:id="customer"
-                        prefHeight="276.0" prefWidth="298.0" spacing="10.0">
+                  <VBox fx:id="customer" prefHeight="276.0" prefWidth="298.0" spacing="10.0">
                      <children>
 
                   <!-- Customer's name field -->
 
-                            <HBox fx:id="name"
-                              layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0" spacing="34.0">
+                            <HBox fx:id="name" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0" spacing="34.0">
                            <children>
                               <Label text="Name :">
                                  <padding>
                                     <Insets left="5.0" />
                                  </padding>
                               </Label>
-                              <TextField fx:id = "nameField" promptText="Name" />
+                              <TextField fx:id="nameField" promptText="Name" />
                            </children>
                         </HBox>
 
                   <!-- Customer's surname field -->
 
-                            <HBox fx:id="surname"
-                              layoutX="18.0" layoutY="18.0" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
+                            <HBox fx:id="surname" layoutX="18.0" layoutY="18.0" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                            <children>
                               <Label text="Surname :">
                                  <padding>
@@ -71,15 +66,14 @@
 
                   <!-- Customer's e-mail field -->
 
-                            <HBox fx:id="email"
-                              layoutX="10.0" layoutY="80.0" prefHeight="100.0" prefWidth="200.0" spacing="31.0">
+                            <HBox fx:id="email" layoutX="10.0" layoutY="80.0" prefHeight="100.0" prefWidth="200.0" spacing="31.0">
                            <children>
                               <Label text="E-mail :">
                                  <padding>
                                     <Insets left="5.0" />
                                  </padding>
                               </Label>
-                              <TextField fx:id = "emailField" promptText="E-mail" />
+                              <TextField fx:id="emailField" promptText="E-mail" />
                            </children>
                         </HBox>
 
@@ -93,17 +87,16 @@
 
        <!-- VBOX for the reservation date and the book button -->
 
-                  <VBox layoutX="10.0" layoutY="10.0" prefHeight="179.0" prefWidth="302.0">
+                  <VBox layoutX="10.0" layoutY="10.0" prefHeight="113.0" prefWidth="377.0">
                      <children>
 
                   <!-- Reservation date-->
 
-                        <HBox fx:id="date"
-                              prefHeight="207.0" prefWidth="298.0" spacing="20.0">
+                        <HBox fx:id="date" prefHeight="207.0" prefWidth="298.0" spacing="20.0">
 
                            <children>
                               <Label text="Date :" />
-                              <DatePicker fx:id = "reservDate"/>
+                              <DatePicker fx:id="reservDate" />
                            </children>
 
                            <padding>
@@ -116,9 +109,7 @@
 
                         <AnchorPane>
                            <children>
-                              <Button fx:id="bookButton"
-                                      layoutX="219.0" layoutY="95.0" mnemonicParsing="false" text="Book reservation!"
-                                      AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0" />
+                              <Button fx:id="bookButton" layoutX="219.0" layoutY="95.0" mnemonicParsing="false" text="Book reservation!" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
                      </children>
