--- a/src/sceneBuilderGui/fxmlResources/welcomeFxml/welcomeScene.fxml
+++ b/src/sceneBuilderGui/fxmlResources/welcomeFxml/welcomeScene.fxml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <!-- Welcome scene with restaurant description and customer's field to book a new reservation-->
 
-<VBox fx:id = "welcomeScene"
-      xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.VBox?>
+<VBox fx:id="welcomeScene" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 
    <children>
 
-      <fx:include fx:id = "customerData" source="customerData.fxml" />
+      <fx:include fx:id="customerData" source="customerData.fxml" />
       <Separator prefWidth="200.0" />
-      <fx:include fx:id = "restaurantData" source="restaurantData.fxml" />
+      <fx:include fx:id="restaurantData" source="restaurantData.fxml" />
 
    </children>
 
